Fixed bug where on tablet landscape view the pipeline view section would not be centred.

--- a/axiome_cloud/css/creative.css
+++ b/axiome_cloud/css/creative.css
@@ -278,6 +278,19 @@ header .header-content .header-content-inner p {
     max-width: 650px;
 }
 
+/* centered columns styles */
+.row-centered {
+    text-align:center;
+}
+.col-centered {
+    display:inline-block;
+    float:none;
+    /* reset the text-align */
+    text-align:left;
+    /* inline-block space fix */
+    margin-right:-4px;
+}
+
 .portfolio-box .portfolio-box-caption {
     display: block;
     position: absolute;
